[package]
name = "signer"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.10.1"
db_handling = {path = "../db_handling"}
ffi-support = "0.4"
hex = "0.4.3"
jni = { version = "0.16.0", optional = true }
libc = "0.2"
plot_icon = { git = "https://github.com/paritytech/polkadot-identicon-rust" }
qr_reader_phone = {path = "..//qr_reader_phone"}
rustc-hex = "2.1.0"
transaction_parsing = {path = "../transaction_parsing"}
transaction_signing = {path = "../transaction_signing"}
zeroize = {version = "1.3.0", features = ["zeroize_derive"]}

[lib]
name = "signer"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["jni"]

[patch.crates-io]
sp-core = { git = 'https://github.com/paritytech/substrate/' }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate/' }
sp-runtime = { git = 'https://github.com/paritytech/substrate/' }
